flame-runtime/testsuite/tests/constraints/should_compile/eqTConjComm.hs

{-# LANGUAGE DataKinds #-}
{-# LANGUAGE TypeFamilies #-}
{-# LANGUAGE TypeOperators #-}
{-# LANGUAGE PostfixOperators #-}
{-# LANGUAGE FlexibleContexts #-}
{-# LANGUAGE RankNTypes #-}
{-# OPTIONS_GHC -fplugin Flame.Solver #-}
module ShouldSucceed where

import Flame.Assert
import Flame.Principals


eqTConjComm :: SPrin p -> SPrin q -> ()
eqTConjComm p q = assertEq (p *∧ q) (q *∧ p) 
